# QuestByCycle

./: gunicorn.conf.py  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
app/: __init__.py  activitypub_utils.py  admin.py  ai.py  auth.py  badges.py  main.py  quests.py  social.py
app/models/: notification.py  user.py
app/utils/: __init__.py  quest_scoring.py
frontend/: layout.js  sw.js  utils.js
frontend/modules/: all_submissions_modal.js  badge_modal.js  quest_detail_modal.js  submission_detail_modal.js
tests/: test_activitypub_delivery.py  test_auth.py  test_config.py  test_demo_game_generation.py  test_game_quests_api.py  test_import_quests_csv.py  test_manage_quests_logic.py  test_quest_complete_notification.py  test_quest_update_delete.py  test_registration.py
