[tool.poetry]
name         = "questbycycle"
version      = "0.2.1"
description  = "QuestByCycle is a Flask-based web application designed to engage and motivate the bicycling community through a gamified approach."
authors      = ["Jaron Rosenau <jaron@rosenau.info>"]
package-mode = false

[tool.poetry.dependencies]
python                = "^3.11"

flask                 = "^3.1.3"
werkzeug              = "^3.1.8"
flask-wtf             = "^1.2.2"
flask-sqlalchemy      = "^3.1.1"
flask-login           = "^0.6.3"
flask-limiter         = "^4.1.1"
sqlalchemy            = "^2.0.49"
psycopg = {extras = ["binary"], version = "^3.3.3"}
wtforms               = "^3.2.1"
email-validator       = "^2.3.0"
cryptography          = "^46.0.7"
pyjwt                 = "^2.12.1"
gunicorn              = "^25.3.0"
apscheduler           = "^3.11.2"
qrcode                = {extras = ["pil"], version = "^8.2"}
openai                = "^2.32.0"
pywebpush             = "^2.3.0"
pytest                = "^9.0.3"
python-dotenv         = "^1.2.2"
rsa                   = "^4.9.1"
html-sanitizer        = "^2.6.0"
requests-oauthlib     = "^2.0.0"
redis                = "^7.4.0"
rq                   = "^2.8.0"
psycopg2-binary = "^2.9.12"
google-cloud-storage = "^3.10.1"
google-api-python-client = "^2.194.0"
flask-humanify = "0.2.9"
pydantic = "^2.13.3"
audioop-lts = {version = "0.2.2", markers = "python_version >= \"3.13\""}

[tool.poetry.scripts]
rqworker = "rq_worker:main"

[build-system]
requires      = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
